data sync from github

--- a/Data exploration and visualization.ipynb
+++ b/Data exploration and visualization.ipynb
@@ -4,6 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The next cell downloads the required data set to carry out the workshop. This kind of code only works on Google Colab, and if you are using another platform to run the notebook, you will need to manually download the data directory from the GitHub repository and put it in the same path as the notebook file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -O main.zip https://github.com/jandion/APSV-BusinessIntelligence/archive/refs/heads/main.zip\n",
+    "!unzip main.zip\n",
+    "!rm -rf data\n",
+    "!mv APSV-BusinessIntelligence-main/data .\n",
+    "!rm -r APSV-BusinessIntelligence-main main.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this workshop we will work with a set of data obtained from a real logistics process. This data contains events of a logistics process in which a series of goods or items are transported from one station to another by train. Trains move wagons in which various items can be transported. For each event, 3 instants of time are recorded:\n",
     "1.\tthe time in which the event is planned\n",
     "2.\tthe time the event was estimated\n",
@@ -224,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
