--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -25,6 +25,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The next cell downloads the required data set to carry out the workshop. This kind of code only works on Google Colab, and if you are using another platform to run the notebook, you will need to manually download the data directory from the GitHub repository and put it in the same path as the notebook file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -O main.zip https://github.com/jandion/APSV-BusinessIntelligence/archive/refs/heads/main.zip\n",
+    "!unzip main.zip\n",
+    "!rm -rf data\n",
+    "!mv APSV-BusinessIntelligence-main/data .\n",
+    "!rm -r APSV-BusinessIntelligence-main main.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If you have any problem importing those modules, you might need to install or update them. If you are using Anaconda, run an Anaconda Prompt and execute `conda install [package]`, or, if you are using just Python, open a terminal and execute `pip install [package]`.\n",
     "\n",
     "Let's load our well known dataset of train events:"
@@ -779,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
