--- a/Introduction to Python.ipynb
+++ b/Introduction to Python.ipynb
@@ -630,6 +630,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell downloads the required data set to carry out the workshop. This kind of code only works on Google Colab, and if you are using another platform to run the notebook, you will need to manually download the data directory from the GitHub repository and put it in the same path as the notebook file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -O main.zip https://github.com/jandion/APSV-BusinessIntelligence/archive/refs/heads/main.zip\n",
+    "!unzip main.zip\n",
+    "!rm -rf data\n",
+    "!mv APSV-BusinessIntelligence-main/data .\n",
+    "!rm -r APSV-BusinessIntelligence-main main.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
