Updating some old references

--- a/Introduction to Python.ipynb
+++ b/Introduction to Python.ipynb
@@ -342,9 +342,7 @@
     "## Import modules\n",
     "In Python external dependencies are usually called modules, to import them we will use `import moduleName`\n",
     "\n",
-    "If you are interested in know more about Python or and additional modules you may need to install them, to do that Python have a command named `pip` to install external libraries (similar to `npm` in Javascript) that you can run in the Anaconda terminal.\n",
-    "\n",
-    "`conda install [name of library]`"
+    "If you are interested in know more about Python or and additional modules you may need to install them, to do that Python have a command named `pip` to install external libraries (similar to `npm` in Javascript)."
    ]
   },
   {
@@ -903,7 +901,7 @@
    "outputs": [],
    "source": [
     "# Searching for customers name contains the string 'Ruiz'\n",
-    "customers.loc[customers[\"name\"].str.contains(\"S.A.\")]"
+    "customers.loc[customers[\"name\"].str.contains(\"Ruiz\")]"
    ]
   },
   {
@@ -1138,7 +1136,7 @@
    "metadata": {},
    "source": [
     "### Problem 3\n",
-    "Plot the top10 heaviest packages (tip: you can use the method `sort_values` https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html)"
+    "Show the top10 heaviest packages (tip: you can use the method `sort_values` https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html)"
    ]
   },
   {
@@ -1537,7 +1535,7 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1551,7 +1549,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c0de1fe606f85d3f2aa9a903f2b0bf89b43d937b91ee737bd06cf0188ff610aa"
+   }
   }
  },
  "nbformat": 4,
