--- a/Data exploration and visualization.ipynb
+++ b/Data exploration and visualization.ipynb
@@ -24,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this workshop we will work with a set of data obtained from a real logistics process. This data contains events of a logistics process in which a series of goods or items are transported from one station to another by train. Trains move wagons in which various items can be transported. For each event, 3 instants of time are recorded:\n",
-    "1.\tthe time in which the event is planned\n",
-    "2.\tthe time the event was estimated\n",
-    "3.\tthe time at which the event actually occurred\n",
+    "In this workshop, we will work with a set of data obtained from a real logistics process. These data contain events of a logistics process in which a series of goods or items are transported from one station to another by train. Trains move wagons in which various items can be transported. For each event, 3 instants of time are recorded:\n",
+    "1. The time in which the event is planned\n",
+    "2. The time at which the event was estimated.\n",
+    "3. The time at which the event actually occurred.\n",
     "\n",
-    "The fields in the dataset have been anonymized, except for the times and description of the events. The types of events appear in Spanish, the following table is a translation of these into English:\n",
+    "The fields in the data set have been anonymized, except for the times and descriptions of the events. The types of events appear in Spanish; the following table is a translation of these into English:\n",
     "\n",
     "Spanish | English\n",
     "---|---\n",
@@ -41,9 +41,7 @@
     "'LLEGADA DE VAGONES'             | 'ARRIVAL OF WAGONS'\n",
     "'SALIDA DE VAGONES'              | 'DEPARTURE OF WAGONS'\n",
     "\n",
-    "\n",
-    "Our goal is obtain as much information as we can from this dataset. We will achieve this in two ways: we will answer questions with numeric values (e.g. how many trains take part in the proccess?) or we will generate some charts to present information in a visual way (e.g. how is the distribution of items transported throughout the year?)\n",
-    "\n"
+    "Our goal is to obtain as much information as we can from this data set. We will achieve this in two ways: we will answer questions with numeric values (e.g. how many trains take part in the proccess?) or we will generate some charts to present information in a visual way (e.g. how is the distribution of items transported throughout the year?)\n"
    ]
   },
   {
@@ -63,13 +61,13 @@
    "metadata": {},
    "source": [
     "# Dataset exploration\n",
-    "Any project related with data analysis starts with a study of the data itself: \n",
+    "Any project related to data analysis starts with a study of the data itself. \n",
     "* What kind of data do we have?\n",
     "* How is it organized? How many columns have each dataframe?\n",
     "* Are there wrong or missing values?\n",
-    "* What does each value of a column means? How many different values are in each column?\n",
+    "* What does each value of a column mean? How many different values are in each column?\n",
     "\n",
-    "With the examples we saw in the previous workshop try to answer that questions."
+    "With the examples we saw in the previous workshop we try to answer those questions."
    ]
   },
   {
@@ -105,14 +103,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data cleaning\n",
-    "After a first view of the data and before to start working with it, we must clean it. This proccess is called preprocessing and it is crucial to be able to obtain good results. We will discard invalid data, fill missing values, drop redundant information, correct typos, etc. We need to create a dataset with the following restrictions.\n",
+    "# Data Cleaning\n",
+    "After a first view of the data and before starting to work with it, we must clean it. This process is called preprocessing, and it is crucial to be able to obtain good results. We will discard invalid data, fill missing values, drop redundant information, correct typos, etc. We need to create a data set with the following restrictions.\n",
     "\n",
-    "* All columns must contain relevant information\n",
+    "* All columns must contain relevant information.\n",
     "* Rows with null or incorrect values should be discarded unless these values can be retrieved in some way (https://pandas.pydata.org/pandas-docs/stable/user_guide/missing_data.html, https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html and https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.fillna.html)\n",
     "* The types of the columns must correspond to the type of data they contain (https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.astype.html)\n",
     "\n",
-    "Python and Pandas have a multitude of methods that make it easier to work with dates. In this workshop can be useful those that allow us to obtain certain fragments of a date (hour of day, the day of the week, etc.) https://docs.python.org/3/library/datetime.html. An effective way to apply a change to an entire column is with a syntax like `data.planned_date.hour`, which allows us to get the hour of the dates in the column `planned_date`"
+    "Python and Pandas have a multitude of methods that make it easier to work with dates. In this workshop can be useful those that allow us to obtain certain fragments of a date (hour of day, the day of the week, etc.) https://docs.python.org/3/library/datetime.html. An effective way to apply a change to an entire column is with a syntax like `data.planned_date.dt.hour`, which allows us to get the hour of the dates in the column `planned_date`"
    ]
   },
   {
@@ -126,9 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data analytics\n",
+    "# Data Analytics\n",
     "\n",
-    "Once we know about the data we are using and we have cleaned it, we need to ask what kind of useful information we can extract from that data. It is a good idea to make a kind of brainstorming of possible questions, then take the list of resulting questions and sort them by their difficulty, finally begin to answer them starting by the easiest ones."
+    "Once we know about the data that we are using and have cleaned it, we need to ask what kind of useful information we can extract from those data. It is a good idea to make a kind of brainstorming of possible questions, then take the list of resulting questions and sort them by their difficulty, and finally begin to answer them starting by the easiest ones."
    ]
   },
   {
@@ -137,7 +135,7 @@
    "source": [
     "## Basic results\n",
     "\n",
-    "Some of the esaiest question or more basic results we can obtain are the following:\n",
+    "Some of the easiest questions or more basic results we can obtain are the following:\n",
     "* Numeric results\n",
     "    * How many packages are there?\n",
     "    * How many trains are there?\n",
@@ -152,14 +150,13 @@
     "* Graphic results\n",
     "    * Bar chart of the number of packages processed at each station\n",
     "    * Histogram of the delay in minutes\n",
-    "    * Distributions of the number of packages handled according to dates (all three), i.e. the number of unique item_id per day\n",
+    "    * Distributions of the number of packages handled according to dates (all three), i.e. the number of unique item_id per day.\n",
     "\n",
+    "By answering these questions, you may discover some inconsistencies or errors in the data that you did not detect in the cleaning phase. This is usual in this type of task; you can return to the preprocessing phase with this new knowledge and refine the cleaning of the data.\n",
     "\n",
-    "By answering these questions, you may discover some inconsistencies or errors in the data that you did not detect in the cleaning phase. This is usual in this type of task, you can return to the preprocessing phase with this new knowledge and refine the cleaning of the data.\n",
+    "Some of those questions are just countings, summations, or rankings, but others need data aggregations with groupby.\n",
     "\n",
-    "Some of those questions are just countings, sumations or rankings, but other need data aggregations with ``groupby``.\n",
-    "\n",
-    "**Answer each question in a different cell of this notebook (remember that you can insert new cell from the Insert menu).**"
+    "**Answer each question in a different cell of this notebook (remember that you can insert a new cell from the Insert menu).**\n"
    ]
   },
   {
@@ -176,15 +173,15 @@
     "# Intermediate results\n",
     "\n",
     "* Numeric results\n",
-    "    * How many different routes does each of the trains do? \n",
+    "    * How many different routes do each of the trains do? \n",
     "    * What are the average, max, and min durations of the complete process of a package? (difference between the first and last date registered for an item)\n",
     "    * What is the day of the week on which more shipments are made?\n",
     "    * In which months each train is active?, and on what days of the week?\n",
     "    * How long does it take on average to load a wagon?\n",
     "    * How many packages does each train carry on each journey? And how many wagons?\n",
-    "    * In which stations does each client operate?\n",
+    "    * On which stations does each client operate?\n",
     "\n",
-    "* Graphic results\n",
+    "* Graphic results.\n",
     "    * Distribution of the delay in minutes of the event x by train\n",
     "    * Number of packages (cumulative) that each station has processed over time\n",
     "    * Distribution of delays according to the type of event\n",
@@ -230,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -244,7 +241,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c0de1fe606f85d3f2aa9a903f2b0bf89b43d937b91ee737bd06cf0188ff610aa"
+   }
   }
  },
  "nbformat": 4,
