--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -295,24 +295,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt \n",
-    "# this makes that plots show in an interactive window\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "x, y = datasets.make_regression(n_samples=100, n_features=2, noise= 0)\n",
     "ax.scatter(x[:,0], x[:,1],y)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "# reset the plot behavior"
    ]
   },
   {
@@ -567,23 +555,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt \n",
-    "# this makes that plots show in an interactive window\n",
     "fig = plt.figure()\n",
     "ax = Axes3D(fig)\n",
     "x, y = datasets.make_classification(n_samples=300, n_features=3,n_classes=4,n_redundant=0,n_clusters_per_class=1)\n",
     "ax.scatter(x[:,0], x[:,1], x[:,2],c=y)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "# reset the plot behavior"
    ]
   },
   {
@@ -811,7 +787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -825,7 +801,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c0de1fe606f85d3f2aa9a903f2b0bf89b43d937b91ee737bd06cf0188ff610aa"
+   }
   }
  },
  "nbformat": 4,
