updated introduction to python

--- a/Introduction to Python.ipynb
+++ b/Introduction to Python.ipynb
@@ -451,7 +451,13 @@
     "### Problem 1\n",
     "Design a method to calculate the cosine distance between two lists of floats ``x`` and ``y``. The cosine distance or cosine similarity is a measure of the angle between two vectors https://en.wikipedia.org/wiki/Cosine_similarity.\n",
     "\n",
-    "$D =1-\\cos(\\theta) = 1-{\\mathbf{A} \\cdot \\mathbf{B} \\over \\|\\mathbf{A}\\| \\|\\mathbf{B}\\|} = 1-\\frac{ \\sum\\limits_{i=1}^{n}{A_i  B_i} }{ \\sqrt{\\sum\\limits_{i=1}^{n}{A_i^2}}  \\sqrt{\\sum\\limits_{i=1}^{n}{B_i^2}} } $"
+    "$D =1-\\cos(\\theta) = 1-{\\mathbf{A} \\cdot \\mathbf{B} \\over \\|\\mathbf{A}\\| \\|\\mathbf{B}\\|} = 1-\\frac{ \\sum\\limits_{i=1}^{n}{A_i  B_i} }{ \\sqrt{\\sum\\limits_{i=1}^{n}{A_i^2}}  \\sqrt{\\sum\\limits_{i=1}^{n}{B_i^2}} } $\n",
+    "\n",
+    "To check your solution you can use the following tests:\n",
+    " - ``cosine_distance([1, 0, -1], [1, 0, -1]) == 0.0``\n",
+    " - ``cosine_distance([1, 0, -1], [-1, 0, 1]) == 2.0``\n",
+    " - ``cosine_distance([1, 0, -1], [0, 1, 0]) == 1.0``\n",
+    " - ``cosine_distance([1, 2, 3], [3, 2, 1]) == 0.2857``"
    ]
   },
   {
@@ -480,44 +486,17 @@
    "metadata": {},
    "source": [
     "### Problem 2\n",
-    "Design a method that creates a dictionary with ``n`` vectors identified with keys ``v1, v2, ... vn``. The vectors should have dimension ``m`` and their components should be random numbers between 0 and 1 (these numbers can be generated with ``random.random()``)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use this cell to write your code\n",
-    "def generate_vectors( n, m ):\n",
-    "    return "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Try it\n",
-    "print(generate_vectors(5, 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problem 3\n",
-    "Design a method that receives a dictionary of vectors and returns a matrix (list of lists) with the distance between each pair of vectors.\n",
+    "Design a method that given a list of lists (a matrix) of numbers, returns the position of the maximum value in a tuple. For example, given the following matrix:\n",
     "\n",
-    "```python\n",
-    "vectors = {\"v1\": [], \"v2\": [], \"v3\": []}\n",
+    "```\n",
+    "matrix = [\n",
+    "    [7, 5, 3],\n",
+    "    [2, 4, 9],\n",
+    "    [1, 6, 8]\n",
+    "]\n",
+    "```\n",
     "\n",
-    "distances = [[cos_distance(v1,v1), cos_distance(v1,v2), cos_distance(v1,v3)],\n",
-    "             [cos_distance(v2,v1), cos_distance(v2,v2), cos_distance(v2,v3)],\n",
-    "             [cos_distance(v3,v1), cos_distance(v3,v2), cos_distance(v3,v3)]]\n",
-    "```"
+    "The method should return the tuple ``(1, 2)``."
    ]
   },
   {
@@ -527,36 +506,7 @@
    "outputs": [],
    "source": [
     "# Use this cell to write your code\n",
-    "def distance_matrix( vectors ):\n",
-    "    return "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Try it\n",
-    "print(distance_matrix( {\"v1\": [1,2,3], \"v2\": [2,3,1], \"v3\": [3,1,2]} ))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problem 4\n",
-    "Design a method that receives a matrix of numbers and return the minimum value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use this cell to write your code\n",
-    "def get_min( distances ):\n",
+    "def get_maximum_position( matrix ):\n",
     "    return"
    ]
   },
@@ -567,27 +517,11 @@
    "outputs": [],
    "source": [
     "# Try it\n",
-    "print(get_min([[.1,.2,.3],[.4,.5,.6],[.7,.8,.9]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# All together!\n",
+    "matrix = [[7, 5, 3], [2, 4, 9], [1, 6, 8]]\n",
+    "print(get_maximum_position(matrix)) # Should print (1,2)\n",
     "\n",
-    "# Generate 10 vectors of dimension 10\n",
-    "vectors = generate_vectors(10, 10)\n",
-    "\n",
-    "# Calculate the distance between all vectors\n",
-    "distances = distance_matrix(vectors)\n",
-    "\n",
-    "# Get the minimum distance\n",
-    "min_dis = get_min(distances)\n",
-    "\n",
-    "print(min_dis)"
+    "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "print(get_maximum_position(matrix)) # Should print (2,2)"
    ]
   },
   {
@@ -630,7 +564,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell downloads the required data set to carry out the workshop. This kind of code only works on Google Colab, and if you are using another platform to run the notebook, you will need to manually download the data directory from the GitHub repository and put it in the same path as the notebook file."
+    "The next cell downloads the required data set to carry out the workshop. This kind of code executes a shell command, in this case `curl` to download the file from the internet. The `!` at the beginning of the line indicates that the command is not Python code, but a shell command.\n",
+    "\n",
+    "If you are not following the recomended environment setup, you may need to download the file manually from the repository and put it in the same folder as the notebook."
    ]
   },
   {
@@ -639,11 +575,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -O main.zip https://github.com/jandion/APSV-BusinessIntelligence/archive/refs/heads/main.zip\n",
-    "!unzip main.zip\n",
-    "!rm -rf data\n",
-    "!mv APSV-BusinessIntelligence-main/data .\n",
-    "!rm -r APSV-BusinessIntelligence-main main.zip"
+    "!curl https://raw.githubusercontent.com/jandion/APSV-BusinessIntelligence/main/data/orders.csv > orders.csv\n",
+    "!curl https://raw.githubusercontent.com/jandion/APSV-BusinessIntelligence/main/data/customers.json > customers.json\n",
+    "!curl https://raw.githubusercontent.com/jandion/APSV-BusinessIntelligence/main/data/packages.zip > packages.zip"
    ]
   },
   {
@@ -905,6 +839,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 💥💥💥\n",
+    "# If we want to retreive a row and we know its index, we can use the method iloc\n",
+    "customers.iloc[23]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -982,6 +927,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Modifying single values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 💥💥💥\n",
+    "# We can modify the content of a single cell with the method at. This method work similar to iloc\n",
+    "# It receives the index of the row and the name of the column we want to access. Watch out, we will pass these parameters between brackets, not parenthesis\n",
+    "# dataframe.at[row_index, \"column_name\"]\n",
+    "print(\"Previous value:\",packages.at[0,\"width\"])\n",
+    "packages.at[0,\"width\"] = 100\n",
+    "print(\"New value:\",packages.at[0,\"width\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Creating new columns"
    ]
   },
@@ -1039,9 +1006,11 @@
    },
    "source": [
     "### Group by\n",
-    "We can execute group by orders similar to SQL.\n",
+    "We can execute group by orders similar to SQL. It creates groups of rows with the same value in a column (or several columns) and then we can apply some functions to the groups, like count, sum, average, etc.\n",
     "\n",
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/groupby.html"
+    "https://pandas.pydata.org/pandas-docs/stable/user_guide/groupby.html\n",
+    "\n",
+    "The basic syntax is `df.groupby(\"column\").function()` or `df.groupby([\"column1\", \"column2\"]).function()`"
    ]
   },
   {
@@ -1105,6 +1074,9 @@
    "metadata": {},
    "source": [
     "## Problems\n",
+    "\n",
+    "Display your solutions using the `print` function. For example `print(\"The solution is \" + str(42))` (do not forget to convert numbers to strings with `str()`)\n",
+    "\n",
     "### Problem 1\n",
     "Calculate the number of trucks and customers"
    ]
@@ -1136,7 +1108,7 @@
    "metadata": {},
    "source": [
     "### Problem 3\n",
-    "Show the top10 heaviest packages (tip: you can use the method `sort_values` https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html)"
+    "Show the top10 heaviest packages (tip: you can use the method `sort_values` https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.sort_values.html). In this case instead of using the `print` function, just evaluate the dataframe to show it."
    ]
   },
   {
@@ -1450,7 +1422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "packages"
    ]
   },
   {
@@ -1464,8 +1436,8 @@
     "# histplot creates an histogram of the indicated column\n",
     "sns.histplot(data=data, x=\"volume\", ax=ax[0], bins=50)\n",
     "\n",
-    "# boxplots are used to \n",
-    "# With the 'hue' parameter\n",
+    "# boxplots are used to display the distribution of values\n",
+    "# With the 'hue' parameter we can define a column to group the data\n",
     "sns.boxplot(data=data, y=\"province\", x=\"weight\", ax=ax[1], hue=\"big\")"
    ]
   },
@@ -1489,7 +1461,7 @@
     "# Regplot \n",
     "sns.regplot(x=\"width\",y=\"volume\",data=packages, ax=ax[0])\n",
     "\n",
-    "# \n",
+    "# Scatterplot\n",
     "sns.scatterplot(data=packages, x=\"width\", y=\"height\", size=\"volume\", ax=ax[1])"
    ]
   },
@@ -1500,7 +1472,7 @@
     "## Problems\n",
     "\n",
     "### Problem 1\n",
-    "Generate a list of vectors with the method `generate_vectors` that we previously coded. Plot one chart for each vector; each of those charts should be a bar chart with the distances to the other vectors (tip: use the method `distance_matrix`)"
+    "Plot in a bar chart the number of customers in each province"
    ]
   },
   {
@@ -1517,7 +1489,7 @@
    "metadata": {},
    "source": [
     "### Problem 2\n",
-    "Combine two kinds of charts (line, bars, scatter, etc) in one plot"
+    "Combine two kinds of charts (line, bars, scatter, etc) in one plot. You can use the data from previous cells or generate new data."
    ]
   },
   {
@@ -1549,7 +1521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
