--- a/Data exploration and visualization.ipynb
+++ b/Data exploration and visualization.ipynb
@@ -24,6 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For this \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "In this workshop, we will work with a set of data obtained from a real logistics process. These data contain events of a logistics process in which a series of goods or items are transported from one station to another by train. Trains move wagons in which various items can be transported. For each event, 3 instants of time are recorded:\n",
     "1. The time in which the event is planned\n",
     "2. The time at which the event was estimated.\n",
@@ -46,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "data = pd.read_csv(\"data/trains.zip\")"
+    "data = pd.read_csv(\"https://raw.githubusercontent.com/jandion/APSV-BusinessIntelligence/main/data/trains.zip\")"
    ]
   },
   {
@@ -106,8 +111,9 @@
     "# Data Cleaning\n",
     "After a first view of the data and before starting to work with it, we must clean it. This process is called preprocessing, and it is crucial to be able to obtain good results. We will discard invalid data, fill missing values, drop redundant information, correct typos, etc. We need to create a data set with the following restrictions.\n",
     "\n",
-    "* All columns must contain relevant information.\n",
-    "* Rows with null or incorrect values should be discarded unless these values can be retrieved in some way (https://pandas.pydata.org/pandas-docs/stable/user_guide/missing_data.html, https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html and https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.fillna.html)\n",
+    "* All columns must contain relevant information. If a column does not contain relevant information, it should be removed using the method `data.drop(columns = [column_name])` (https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)\n",
+    "* Duplicate rows should be removed using the method `data.drop_duplicates()` (https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop_duplicates.html)\n",
+    "* Rows with null or incorrect values should be discarded unless these values can be retrieved in some way (https://pandas.pydata.org/pandas-docs/stable/user_guide/missing_data.html, https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html and https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.fillna.html). This includes rows with illegal values acording the dataset description (e.g. a negative number of items)\n",
     "* The types of the columns must correspond to the type of data they contain (https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.astype.html)\n",
     "\n",
     "Python and Pandas have a multitude of methods that make it easier to work with dates. In this workshop can be useful those that allow us to obtain certain fragments of a date (hour of day, the day of the week, etc.) https://docs.python.org/3/library/datetime.html. An effective way to apply a change to an entire column is with a syntax like `data.planned_date.dt.hour`, which allows us to get the hour of the dates in the column `planned_date`"
@@ -241,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
