--- a/Introduction to Python.ipynb
+++ b/Introduction to Python.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Python\n",
-    "Python is a general propose programing language. In these workshops we will use Python 3.8 or higher. Python is an interpreted language as JavaScript and in opposition to Java or C which need to be compiled to run; this implies that some of the errors detected during the source compilation will not be noticed and will generate exceptions during execution.\n",
+    "Python is a general purpose programming language. In these workshops, we will use Python 3.8 or higher. Python is an interpreted language as JavaScript and, in opposition to Java or C, which need to be compiled to run; this implies that some of the errors detected during the source compilation will not be noticed and will generate exceptions during execution.\n",
     "\n",
-    "In this notebook we are going to see some very basic examples of how to use Python and some of its libraries, to get a detailed view of the language check https://docs.python.org/3/tutorial/\n",
+    "In this notebook we are going to see some very basic examples of how to use Python and some of its libraries, to get a detailed view of the language, check https://docs.python.org/3/tutorial/\n",
     "\n",
     "## Variables and types\n",
-    "Python is a strongly typed language. Python has 4 basic types: integer number `int`, decimal numbers `float`, booleans `bool` and text strings `str`. When we define a variable, we will not specify the type."
+    "Python is a strongly typed language. Python has 4 basic types: integer number `int`, decimal number `float`, boolean `bool` and text strings `str`. When we define a variable, we will not specify the type."
    ]
   },
   {
